      alternative.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Dummy.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{nobs(mle(*, nobs = .))} now works.
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignettes is now part of running \command{make}
      from an SVN checkout: a separate \command{make vignettes} is no
      longer required.

      These vignette PDFs are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{plot.lm(which = 5)} was intended to order factor
      levels in increasing order of mean standardized residual.   It
      ordered the factor labels correctly, but could plot the wrong
      group of residuals against the label.  (\PR{14545})

      \item \code{mosaicplot()} could clip the factor labels, and could
      overlap them with the cells if a non-default value of
      \code{cex.axis} was used.  (Related to \PR{14550}.)
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item \code{replicate()} (by default) and \code{vapply()} (always)
      now return a higher-dimensional array instead of a matrix in the case
      where the inner function value is an array of dimension >= 2.

      \item Printing and formatting of floating point numbers is now
      using the correct number of digits, where it previously rarely
      differed by a few digits. (See \dQuote{scientific} entry below.)
      This affects \emph{many} \file{*.Rout.save} checks in packages.
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{normalizePath()} has been moved to the \pkg{base}